--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,4 @@
+/* indexファイルのCSS */
 
 .item_search label{background-color: blue;
 
@@ -6,3 +7,20 @@
 .search{
     background-color: brown;
 }
+
+.card-text{
+    text-align: left;
+    font-size: small;
+}
+
+.card-body .text{
+    background-color: aqua;
+
+}
+
+
+.card-body .btn btn-primary{
+    background-color: aquamarine;
+
+}
+
