--- a/public/css/index.css
+++ b/public/css/index.css
@@ -24,9 +24,22 @@
 }
 
 .card col-sm-3 col-xs-12{
+    position: relative;
+    overflow: hidden;
+    padding-top: 60%;
+    margin: 10px 5px;
+
 
 }
 
 .card col-sm-3 col-xs-12 img{
-    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+
 }
